<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_form_profil"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tb_lastname_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Et_lastname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tb_name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Et_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tb_phone_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Et_phone"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bt_update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickUpdate"
        android:text="@string/bt_update" />

    <Button
        android:id="@+id/bt_retour_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickReturn"
        android:text="@string/bt_return" />
</LinearLayout>