<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Titre_connexion"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Et_mail_connexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/Et_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Et_password_connexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/Et_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#2E97D9"
        android:onClick="onClickSignIn"
        android:text="@string/bt_signIn"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/bt_retour_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#2E97D9"
        android:onClick="onClickInscription"
        android:text="@string/bt_inscription"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />
</LinearLayout>
