<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_form_add_friend_enemy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Titre_form_add_friend_enemy"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_userMail_form_add_friends_enemy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Et_mail"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/id_spinner_form_add_friend_enemy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_add_form_friends_enemy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickAdd"
        android:text="@string/bt_add_friend_enemy" />

    <Button
        android:id="@+id/bt_return_form_add_friend_enemy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickReturn"
        android:text="@string/bt_return" />
</LinearLayout>
