<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_Menu"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickProfile"
        android:text="@string/bt_to_profile" />

    <Button
        android:id="@+id/bt_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickMap"
        android:text="@string/bt_to_map" />
</LinearLayout>